# jharness-python

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: model-providers.md  performance.md  python-package-boundaries.md  releasing.md
docs/decisions/: 0009-product-distributions.md  0010-external-tools-project.md  README.md
examples/python/: anthropic_messages.py  openai_chat_completions.py
python/: pyproject.toml
python/conformance/: README.md
python/conformance/tests/: test_conformance.py
python/kernel/: LICENSE  README.md  pyproject.toml
python/providers/: README.md  pyproject.toml
python/providers/src/jharness/providers/anthropic/: errors.py
python/providers/src/jharness/providers/anthropic/messages_api/: client.py  codec.py  messages.py
python/providers/src/jharness/providers/deepseek/: __init__.py
python/providers/src/jharness/providers/openai/: errors.py
python/providers/src/jharness/providers/openai/chat_completions/: client.py
python/providers/tests/: test_http_errors.py  test_provider_codec_edges.py
python/toolkit/: README.md  pyproject.toml
scripts/: clean_workspace.py  sync_spec.py  verify_release.py  verify_testpypi.py  verify_wheels.py
tests/: README.md  test_contracts.py  test_dependency_boundaries.py  test_examples_and_docs.py  test_protocol_parity.py  test_public_api.py  test_release_process.py  test_repository_tools.py
