[project]
name = "jharness-kernel"
version = "0.1.1"
description = "JHarness model-neutral immutable runtime kernel"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "JHarness contributors" }]
keywords = ["ai", "agent", "model", "runtime", "tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Ezio2000/jharness-python/tree/main/docs"
Homepage = "https://github.com/Ezio2000/jharness-python"
Issues = "https://github.com/Ezio2000/jharness-python/issues"
Repository = "https://github.com/Ezio2000/jharness-python.git"

[tool.hatch.build.targets.wheel]
packages = ["src/jharness"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
